{
    "name": "PlayerUISystem",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "93f483bb-ba12-406e-a7ef-43a1d5d8b75a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "f6d9efdb-0bdb-4042-8c26-c7d9b449697b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Value",
                    "id": "261ebba8-c91b-4d48-9a30-27781527fd76",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "9960c392-92b2-40cf-9eab-c380c0cb5380",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Evade",
                    "type": "Button",
                    "id": "40970bcd-c91d-491a-aa21-509251f05c69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackHeavy",
                    "type": "Button",
                    "id": "291a0706-107a-4d26-a8f6-84fc9a88467d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackLight",
                    "type": "Button",
                    "id": "74eb9530-9f1f-4497-8228-27705e9fbc64",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleTarget",
                    "type": "Button",
                    "id": "10875752-0d0c-4b98-a670-5e58b8df8293",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ReleaseTarget",
                    "type": "Button",
                    "id": "42c534b2-2290-489e-8ec4-00e09117d258",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetAvatar",
                    "type": "Button",
                    "id": "18a0305d-3d75-4b75-adce-99858ee1988f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DebugNoAvatar",
                    "type": "Button",
                    "id": "39eac0cb-2553-476f-ab34-3152fa1c1967",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c60c96e8-49c0-4e26-820c-09654058257c",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b33d37fb-de9e-453f-8371-3f56e20a4f19",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "107282ab-5691-47d3-bc7f-e71ae3e34bcc",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "810e21d0-6538-4416-8d90-2bf50267a6fa",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd4c41fe-3fc2-46b1-8b74-c3a9d84f28d2",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Evade",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe3f87d0-1a23-4867-bcd3-5cd8695e8b10",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "AttackHeavy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f2ea8c8-1d0c-4975-9ad3-dea14c00b20c",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "AttackHeavy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97f689a0-35bf-4d21-ba34-a6f279be5485",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "AttackLight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "393504e3-5e93-4ec3-8894-8b5f0c48b833",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "AttackLight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f19f7348-95c3-42de-a807-2c4d8180b83d",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0db5bd2-2f5e-4772-b989-37907db83cde",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "ReleaseTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6870fd6e-c87f-40af-b223-07722410d3ee",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReleaseTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93b41df7-7e9f-4875-8128-7d0361021730",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "SetAvatar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f94e6454-905e-42ba-b2be-bc6d801c2f2d",
                    "path": "<Keyboard>/f12",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DebugNoAvatar",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}